# lmf-async-sockets

./: .gitignore  CMakeLists.txt  CMakePresets.json  Utils.cmake
src/: CMakeLists.txt  common.hpp  main.cpp
src/Async/: AwaiterToken.cpp  AwaiterToken.hpp  CMakeLists.txt  CategoriaPrioridade.hpp  CoHandle.hpp  Escalonador.cpp  Escalonador.hpp  Escalonador.tpp  Tarefa.cpp  Tarefa.hpp  Tarefa.tpp  Trava.cpp  Trava.hpp
src/Async/Tarefa/: Awaiter.hpp  Awaiter.tpp  AwaiterFinal.hpp  AwaiterFinal.tpp  AwaiterTarefa.hpp  AwaiterTarefa.tpp  Promise.hpp  Promise.tpp
src/Async/Trava/: Awaiter.cpp  Awaiter.hpp
src/AsyncTCP/: AsyncTCP.hpp  AsyncTCPWindows.cpp  AsyncTCPWindows.hpp  AwaiterToken.cpp  AwaiterToken.hpp  CMakeLists.txt  CrtToken.cpp  CrtToken.hpp  DNSLookupWindows.cpp  DNSLookupWindows.hpp  DNSLookupWindowsErr.hpp  DNSSolveWindows.cpp  DNSSolveWindows.hpp  EnderecoIP.hpp  Escalonavel.cpp  Escalonavel.hpp
src/AsyncTCP/Err/: DNSLookupErr.hpp
src/Coroutines/: AwaiterFinal.hpp  AwaiterFinal.tpp  AwaiterInicial.hpp  AwaiterTarefa.hpp  AwaiterTarefa.tpp  AwaiterToken.cpp  AwaiterToken.hpp  CMakeLists.txt  Escalonador.hpp  FilaTarefas.cpp  FilaTarefas.hpp  Promise.hpp  Promise.tpp  Tarefa.hpp  Task.hpp
src/Err/: Err.hpp
src/SocketUtils/: Socket.hpp  SocketUtils.hpp
src/Utils/: CMakeLists.txt  Utils.hpp  UtilsWindows.cpp  UtilsWindows.hpp
